Fully moved to new way of creating key and trust stores for tests, removed the old containers and their associated files